--- a/frontend_assignment/package.json
+++ b/frontend_assignment/package.json
@@ -17,13 +17,16 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@material-ui/core": "^4.12.4",
         "@metamask/detect-provider": "^1.2.0",
         "@zk-kit/identity": "^1.4.1",
         "@zk-kit/protocols": "^1.11.0",
         "assert": "^2.0.0",
         "next": "12.0.10",
         "react": "17.0.2",
-        "react-dom": "17.0.2"
+        "react-dom": "17.0.2",
+        "react-hook-form": "^7.31.2",
+        "yup": "^0.32.11"
     },
     "devDependencies": {
         "@appliedzkp/semaphore-contracts": "^0.8.0",
