--- a/rust_assignment/freivald/Cargo.toml
+++ b/rust_assignment/freivald/Cargo.toml
@@ -8,11 +8,13 @@ edition = "2021"
 [dependencies]
 ndarray = "0.15.0"
 # nalgebra = "0.31.0"
-rand = "0.8.5"
+# rand = "0.8.5"
 # ark-ff = "0.3.0"
 ark-bls12-381 = "0.3.0"
 ark-std = "0.3.0"
+ark-ff = "0.3.0"
+ndarray-rand = "0.14.0"
 
-[dev-dependencies]
+# [dev-dependencies]
 rstest = "0.13.0"
 lazy_static = "1.4.0"
